Fix list spacing
Safari did not respect the padding set on the unordered lists.
I want to see if `display: flex` is affecting their spacing.

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -184,11 +184,8 @@ main article {
   flex: 1 1 220px;
 }
 
-.ingredients-and-steps ul,
-.ingredients-and-steps ol {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+.ingredients-and-steps li:not(:last-child) {
+  margin-bottom: 1rem;
 }
 
 .ingredients-and-steps ul li::before,
